force-app/main/default/objects/Invoice__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Discount percentage</description>
    <label>Discount Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>