force-app/main/default/objects/Invoice__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Date fully paid</description>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>