force-app/main/default/objects/Invoice__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <description>Applicable tax percentage</description>
    <label>Tax Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>