force-app/main/default/objects/Invoice__c/validationRules/Discount_must_be_btw_0_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_must_be_btw_0_to_100</fullName>
    <active>true</active>
    <description>Discount percentage should always be between 0 to 100</description>
    <errorConditionFormula>OR( Tax_Percentage__c &lt; 0,
   Tax_Percentage__c &gt; 100 )</errorConditionFormula>
    <errorMessage>You can&apos;t insert Negative Value in Discount</errorMessage>
</ValidationRule>