force-app/main/default/objects/Invoice__c/validationRules/DueDate_NotBefore_IssueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDate_NotBefore_IssueDate</fullName>
    <active>true</active>
    <description>Due Date cannot be earlier than Issue Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Due_Date__c)),
    NOT(ISBLANK(Issue_Date__c)),
    Due_Date__c &lt; Issue_Date__c
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be earlier than Issue Date.</errorMessage>
</ValidationRule>