force-app/main/default/objects/Invoice__c/validationRules/Paid_amount_not_exceeded_Total_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_amount_not_exceeded_Total_Amount</fullName>
    <active>true</active>
    <description>Amount Paid cannot exceed Total Amount.</description>
    <errorConditionFormula>Amount_Paid__c  &gt;  Total_Amount__c</errorConditionFormula>
    <errorMessage>Amount Paid cannot exceed Total Amount.</errorMessage>
</ValidationRule>