force-app/main/default/objects/Invoice__c/validationRules/Paid_amount_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_amount_not_negative</fullName>
    <active>true</active>
    <description>Amount Paid cannot be negative.</description>
    <errorConditionFormula>Amount_Paid__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>Amount Paid cannot be negative.</errorMessage>
</ValidationRule>