force-app/main/default/objects/Invoice__c/validationRules/PaidDate_After_SentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PaidDate_After_SentDate</fullName>
    <active>true</active>
    <description>Paid Date cannot be earlier than Sent Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Paid_Date__c)),
    NOT(ISBLANK(Sent_Date__c)),
    Paid_Date__c &lt; Sent_Date__c
)</errorConditionFormula>
    <errorDisplayField>Paid_Date__c</errorDisplayField>
    <errorMessage>Paid Date cannot be earlier than Sent Date.</errorMessage>
</ValidationRule>