force-app/main/default/objects/Invoice__c/validationRules/PaidDate_NotBefore_IssueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PaidDate_NotBefore_IssueDate</fullName>
    <active>true</active>
    <description>Paid Date cannot be earlier than Issue Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Paid_Date__c)),
    NOT(ISBLANK(Issue_Date__c)),
    Paid_Date__c &lt; Issue_Date__c
)</errorConditionFormula>
    <errorDisplayField>Paid_Date__c</errorDisplayField>
    <errorMessage>Paid Date cannot be earlier than Issue Date.</errorMessage>
</ValidationRule>