force-app/main/default/objects/Invoice__c/validationRules/Prevent_Negative_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_value</fullName>
    <active>true</active>
    <description>Prevent entering a negative value in the Tax % field so that tax calculations remain valid and accurate</description>
    <errorConditionFormula>Tax_Percentage__c &lt; 0</errorConditionFormula>
    <errorMessage>Tax % should not be Negative</errorMessage>
</ValidationRule>