force-app/main/default/objects/Invoice__c/validationRules/prevent_paid_status_when_balance_is_due.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_paid_status_when_balance_is_due</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Paid&quot;),
    Balance_Due__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Invoice cannot be marked as Paid while Balance Due is greater than 0.</errorMessage>
</ValidationRule>