force-app/main/default/objects/Invoice__c/validationRules/Prevent_Paid_To_Draft_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Paid_To_Draft_Status</fullName>
    <active>true</active>
    <description>Invoice cannot move from Paid back to Draft.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Paid&quot;),
    ISPICKVAL(Status__c, &quot;Draft&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Invoice cannot be moved from Paid back to Draft.</errorMessage>
</ValidationRule>