force-app/main/default/objects/Invoice__c/validationRules/Prevent_sent_status_when_subtotal_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_sent_status_when_subtotal_zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Sent&quot;),
    Subtotal__c = 0
)</errorConditionFormula>
    <errorMessage>Invoice cannot be marked as Sent when Subtotal is 0.</errorMessage>
</ValidationRule>