force-app/main/default/objects/Invoice__c/validationRules/Prevent_Status_Draft_To_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Draft_To_Paid</fullName>
    <active>true</active>
    <description>Invoice cannot move directly from Draft to Paid.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Paid&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Invoice cannot be moved directly from Draft to Paid. Please follow the defined status flow.</errorMessage>
</ValidationRule>